--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
    <header>
+       <h1>ejemplos css</h1>
 
    </header> 
    <main>
@@ -21,11 +22,11 @@
        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste odit, culpa accusantium sapiente, iure tempora atque itaque vitae iusto libero saepe corporis commodi earum enim debitis officia rem, nesciunt quas!</p>
        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores perspiciatis provident optio in, quisquam rerum architecto facilis voluptatum magni aspernatur non fuga deleniti vitae fugit. Inventore, quam? Sint, accusantium quidem?</p>
        <section>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus architecto ipsam sunt molestiae cum, quis saepe doloribus ullam aut deleniti nam est blanditiis rem iusto. Pariatur inventore dolores molestiae assumenda.
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus architecto ipsam sunt molestiae cum, quis saepe doloribus ullam aut deleniti nam est blanditiis rem iusto. Pariatur inventore dolores molestiae assumenda.
             
-           </p>
-           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea quisquam fuga repudiandae dolor natus, nulla inventore, doloremque earum eligendi cum neque aperiam repellendus unde odio porro quis facere, tenetur corrupti?</p>
-           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque deleniti harum distinctio minima, doloribus ab non cum minus incidunt, voluptas quisquam fuga est facilis necessitatibus sint beatae atque praesentium itaque.</p>
+         </p>
+         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea quisquam fuga repudiandae dolor natus, nulla inventore, doloremque earum eligendi cum neque aperiam repellendus unde odio porro quis facere, tenetur corrupti?</p>
+         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque deleniti harum distinctio minima, doloribus ab non cum minus incidunt, voluptas quisquam fuga est facilis necessitatibus sint beatae atque praesentium itaque.</p>
 
 
        </section>
