--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
    <header>
@@ -37,7 +38,7 @@
 
    </main>
    <footer>
-
+<h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, maiores numquam nam dolorem veritatis iure soluta quam facere nostrum doloribus vitae tempora qui dicta modi sunt, omnis blanditiis suscipit illo?</h1>
 
    </footer>
 </body>
