--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 <body>
    <header>
        <h1>ejemplos css</h1>
+       <nav><a href="pagina1.html">ir a la pagina 1</a></nav>
 
    </header> 
    <main>
        <section>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab omnis atque dignissimos dolores, deleniti possimus voluptatem neque recusandae repudiandae quos sunt voluptas optio illum facere harum reiciendis, amet quia cumque.</p>
+   <p class="parrafo1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab omnis atque dignissimos dolores, deleniti possimus voluptatem neque recusandae repudiandae quos sunt voluptas optio illum facere harum reiciendis, amet quia cumque.</p>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore quia molestias dolores. Accusantium, molestiae deserunt, eum fugiat distinctio sequi suscipit consequatur veniam nisi consequuntur ipsum minima id soluta adipisci ipsam.</p>
 
    
-   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia ullam accusantium consequatur similique reiciendis. Libero, facilis. Autem repellat architecto laborum reprehenderit commodi voluptas, tempora, doloribus veritatis quae eius vel dolor.</p>
+   <p class="parrafo2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia ullam accusantium consequatur similique reiciendis. Libero, facilis. Autem repellat architecto laborum reprehenderit commodi voluptas, tempora, doloribus veritatis quae eius vel dolor.</p>
        </section>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ipsam est eos aut minima facilis consequuntur nisi illum. Distinctio, nobis minus ducimus labore similique repudiandae? Quo aspernatur laborum quod obcaecati!</p>
        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste odit, culpa accusantium sapiente, iure tempora atque itaque vitae iusto libero saepe corporis commodi earum enim debitis officia rem, nesciunt quas!</p>
